# calendar-server-oepl

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
src/html/: setup.html
src/utils/: deprecated_currentevents.rs  events.rs  getevents.rs  mod.rs
