[package]
name = "openepaperlink-calendar"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.92"
# google-calendar3 = "6.0.0"
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"] }
dirs = "5.0.1"
chrono = "0.4.38"
chrono-tz = "0.10.0"
actix-web = "4.10.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
reqwest = "0.12.15"
icalendar = "0.16.13"